🐛 trying to solve the slow umap computation